--- a/Saber/Saber.vcxproj.filters
+++ b/Saber/Saber.vcxproj.filters
@@ -108,7 +108,7 @@
     <ClInclude Include="PostProcessing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="RenderModel.h">
+    <ClInclude Include="MeshRenderObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ComputeObject.h">
@@ -158,6 +158,12 @@
     </ClInclude>
     <ClInclude Include="SeparateChainingMap.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CppHlslTypesRedefine.h">
+      <Filter>Common Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IndirectCommand.h">
+      <Filter>Common Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
