Now using indirect render subsystem for all objects in scene

--- a/Saber/Saber.vcxproj.filters
+++ b/Saber/Saber.vcxproj.filters
@@ -293,7 +293,10 @@
     <FxCompile Include="SinglePassDownsamplerCS.hlsl">
       <Filter>Shaders\FidelityFX</Filter>
     </FxCompile>
-    <FxCompile Include="IndirectUpdater.hlsl">
+    <FxCompile Include="CbMeshIndirectUpdater.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="CbMesh4IndirectUpdater.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
